testsuite/tests/interpreter_errors/call_stack/test.out
script.lkql:1:15: error: Null receiver in dot access
1 | fun error() = null.not_a_field()
  |               ^^^^^^^^^^^^^^^^
 in error (called at script.lkql:2:20)
 in call_error (called at script.lkql:3:25)
 in call_call_error (called at script.lkql:4:1)
